welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
		{if (isFacingTrail)
                     ^SlugSnail:10: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
				if (isFacingTrail)
                                    ^